--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -3,7 +3,10 @@
  * Copyright 2013-2020 Start Bootstrap
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-clean-blog/blob/master/LICENSE)
  */
-
+ .dropdown-item.active, .dropdown-item:active {
+  color: #fff;
+  background-color: #868e96;
+}
  html {
   scroll-behavior: smooth;
 }
