--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -3,6 +3,17 @@
  * Copyright 2013-2020 Start Bootstrap
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-clean-blog/blob/master/LICENSE)
  */
+
+
+#share-buttons img {
+width: 35px;
+padding: 5px;
+border: 0;
+box-shadow: 0;
+display: inline;
+}
+ 
+</style>
  .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   background-color: #868e96;
