--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -49,12 +49,13 @@ html {
 body {
   font-size: 20px;
   color: #212529;
-  font-family: "Lora", "Times New Roman", serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 p {
   line-height: 1.5;
   margin: 30px 0;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 p a {
